tests/baselines/reference/predicateSemantics.errors.txt
predicateSemantics.ts(7,16): error TS2871: This expression is always nullish.
predicateSemantics.ts(10,16): error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
predicateSemantics.ts(26,13): error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
predicateSemantics.ts(27,13): error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
predicateSemantics.ts(30,13): error TS2872: This kind of expression is always truthy.
predicateSemantics.ts(31,13): error TS2872: This kind of expression is always truthy.
predicateSemantics.ts(32,21): error TS2871: This expression is always nullish.
predicateSemantics.ts(34,20): error TS2871: This expression is always nullish.
predicateSemantics.ts(35,20): error TS2871: This expression is always nullish.
predicateSemantics.ts(38,29): error TS2871: This expression is always nullish.
predicateSemantics.ts(40,22): error TS2871: This expression is always nullish.
predicateSemantics.ts(41,21): error TS2871: This expression is always nullish.
predicateSemantics.ts(41,29): error TS2871: This expression is always nullish.
predicateSemantics.ts(42,21): error TS2874: This expression is never nullish.
predicateSemantics.ts(43,22): error TS2874: This expression is never nullish.
predicateSemantics.ts(46,8): error TS2872: This kind of expression is always truthy.
predicateSemantics.ts(47,11): error TS2872: This kind of expression is always truthy.
predicateSemantics.ts(48,8): error TS2872: This kind of expression is always truthy.
predicateSemantics.ts(49,8): error TS2872: This kind of expression is always truthy.


==== predicateSemantics.ts (19 errors) ====
    declare let opt: number | undefined;
    
    // OK: One or other operand is possibly nullish
    const test1 = (opt ? undefined : 32) ?? "possibly reached";
    
    // Not OK: Both operands nullish
    const test2 = (opt ? undefined : null) ?? "always reached";
                   ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2871: This expression is always nullish.
    
    // Not OK: Both operands non-nullish
    const test3 = (opt ? 132 : 17) ?? "unreachable";
                   ~~~~~~~~~~~~~~
!!! error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
    
    // Parens
    const test4 = (opt ? (undefined) : (17)) ?? 42;
    
    // Should be OK (special case)
    if (!!true) {
    
    }
    
    // Should be OK (special cases)
    while (0) { }
    while (1) { }
    while (true) { }
    while (false) { }
    
    const p01 = {} ?? null;
                ~~
!!! error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
    const p02 = 0 > 1 ?? null;
                ~~~~~
!!! error TS2869: Right operand of ?? is unreachable because the left operand is never nullish.
    const p03 = null ?? 1;
    const p04 = null ?? null;
    const p05 = (class foo { }) && null;
                ~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    const p06 = (class foo { }) || null;
                ~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    const p07 = null ?? null ?? null;
                        ~~~~
!!! error TS2871: This expression is always nullish.
    
    const p10 = opt ?? null ?? 1;
                       ~~~~
!!! error TS2871: This expression is always nullish.
    const p11 = opt ?? null ?? null;
                       ~~~~
!!! error TS2871: This expression is always nullish.
    const p12 = opt ?? (null ?? 1);
    const p13 = opt ?? (null ?? null);
    const p14 = opt ?? (null ?? null ?? null);
                                ~~~~
!!! error TS2871: This expression is always nullish.
    
    const p20 = null ?? (opt ? null : undefined) ?? null;
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2871: This expression is always nullish.
    const p21 = null ?? null ?? null ?? null;
                        ~~~~
!!! error TS2871: This expression is always nullish.
                                ~~~~
!!! error TS2871: This expression is always nullish.
    const p22 = null ?? 1 ?? 1;
                        ~
!!! error TS2874: This expression is never nullish.
    const p23 = null ?? (opt ? 1 : 2) ?? 1;
                         ~~~~~~~~~~~
!!! error TS2874: This expression is never nullish.
    
    // Outer expression tests
    while ({} as any) { }
           ~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    while ({} satisfies unknown) { }
              ~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    while ((<any>({}))) { }
           ~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    while ((({}))) { }
           ~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    
    declare let cond: any;
    
    // Should be OK
    console.log((cond || undefined) && 1 / cond);
    